--- a/style.css
+++ b/style.css
@@ -213,12 +213,13 @@ body::-webkit-scrollbar {
     width: 100%;
     height: inherit;
     border-radius: 20px;
-    background-image: linear-gradient(45deg, white,white,  var(--base-color));
+    background-image: linear-gradient(45deg, var(--base-color), white, var(--base-color));
 }
 
 
 .stats__info {
     min-width: 100%;
+    padding-inline: 35px;
 }
 
 
@@ -271,11 +272,20 @@ body::-webkit-scrollbar {
     width: 100%;
     display: flex;
     padding-inline: 20px;
-    background-color: white;
     padding-block: 5px;
-    border-bottom-left-radius: 20px;
-    border-bottom-right-radius: 20px;
     justify-content: space-between;
+}
+
+
+.stats__buttons button {
+    border: none;
+    background-color: unset;
+    transition: transform 225ms ease-in-out;
+}
+
+
+.stats__buttons button:hover{
+    transform: scale(1.1);
 }
 
 
