--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ body::-webkit-scrollbar {
     align-items: center;
     position: fixed;
     top: 0;
+    z-index: 1;
     width: 100%;
     padding-inline: 50px;
     background-color: rgb(56, 110, 156);
