--- a/style_card_and_stats.css
+++ b/style_card_and_stats.css
@@ -16,6 +16,7 @@
     display: flex;
     width: 400px;
     height: 500px;
+    z-index: 11;
     background-color: aliceblue;
     border-radius: 20px;
 }
