--- a/style.css
+++ b/style.css
@@ -28,6 +28,77 @@ body::-webkit-scrollbar {
 }
 
 
+/* Loading animation*/
+
+.loader {
+    position: absolute;
+    top: calc(50% - 32px);
+    left: calc(50% - 32px);
+    width: 64px;
+    height: 64px;
+    border-radius: 50%;
+    perspective: 800px;
+}
+
+.inner {
+    position: absolute;
+    box-sizing: border-box;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+}
+
+.inner.one {
+    left: 0%;
+    top: 0%;
+    animation: rotate-one 1s linear infinite;
+    border-bottom: 3px solid red;
+}
+
+.inner.two {
+    right: 0%;
+    top: 0%;
+    animation: rotate-two 1s linear infinite;
+    border-right: 3px solid yellow;
+}
+
+.inner.three {
+    right: 0%;
+    bottom: 0%;
+    animation: rotate-three 1s linear infinite;
+    border-top: 3px solid rgb(12, 209, 12);
+}
+
+@keyframes rotate-one {
+    0% {
+        transform: rotateX(35deg) rotateY(-45deg) rotateZ(0deg);
+    }
+
+    100% {
+        transform: rotateX(35deg) rotateY(-45deg) rotateZ(360deg);
+    }
+}
+
+@keyframes rotate-two {
+    0% {
+        transform: rotateX(50deg) rotateY(10deg) rotateZ(0deg);
+    }
+
+    100% {
+        transform: rotateX(50deg) rotateY(10deg) rotateZ(360deg);
+    }
+}
+
+@keyframes rotate-three {
+    0% {
+        transform: rotateX(35deg) rotateY(55deg) rotateZ(0deg);
+    }
+
+    100% {
+        transform: rotateX(35deg) rotateY(55deg) rotateZ(360deg);
+    }
+}
+
 /* Classes for the Header */
 .header__container {
     display: flex;
@@ -92,6 +163,13 @@ body::-webkit-scrollbar {
 
 
 /* Classes for the card */
+.cards_loading-animation{
+    position: fixed;
+    top: 0px;
+    z-index: 10;
+    width: 100%;
+    height: 100svh;
+}
 .card__container {
     border-radius: 20px;
     height: 200px;
@@ -123,7 +201,7 @@ body::-webkit-scrollbar {
 }
 
 
-.type__element{
+.type__element {
     padding: 2px 8px;
     border-radius: 20px;
     background-color: rgb(24, 120, 205);
